--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 
 <body>
-    <h1>Simon Says Game😎</h1>
-    <h2>Press any key to start the game</h2>
+    <h1>😎Simon Says Game😎</h1>
+    <h2>Press me start the game</h2>
     <div class="btn-container">
         <button class="btn red" id="red"></button>
         <button class="btn yellow" id="yellow"></button>
