--- a/index.html
+++ b/index.html
@@ -9,14 +9,36 @@
 </head>
 
 <body>
-    <h1>😎Simon Says Game😎</h1>
-    <h2>Press me start the game</h2>
-    <div class="btn-container">
-        <button class="btn red" id="red"></button>
-        <button class="btn yellow" id="yellow"></button>
-        <button class="btn green" id="green"></button>
-        <button class="btn purple" id="purple"></button>
-    </div>
+    <!DOCTYPE html>
+    <html lang="en">
+
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Simon Says Game</title>
+        <link rel="stylesheet" href="style.css" />
+    </head>
+
+    <body>
+        <h1>Simon Says Game 😎</h1>
+        <h2>Remember the sequence</h2>
+
+        <div class="btn-container">
+            <button class="btn red" id="red"></button>
+            <button class="btn yellow" id="yellow"></button>
+            <button class="btn green" id="green"></button>
+            <button class="btn purple" id="purple"></button>
+        </div>
+        <button class="start-btn Start-game">Start Game</button>
+
+
+        <footer>Made with ❤️ by Yash Verma</footer>
+
+
+        <script src="script.js"></script>
+    </body>
+
+    </html>
 
 </body>
 <script src="script.js"></script>
